tests/fixtures/pass/deep-nested-mixed/.chous
in app:
  allow components, assets
  
  in components:
    use PascalCase for files *.vue
  
  in assets:
    move *.css to css
