tests/fixtures/fail/use-nested-violation/.chous
in components:
  use PascalCase for files *.vue
